--- a/xpi/content/css/padlock_none.css
+++ b/xpi/content/css/padlock_none.css
@@ -2,8 +2,15 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
 	/* Firefox 45+ */
-	#main-window[fx45plus="true"] #urlbar #connection-icon {
-	  display:none !important;	
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedDomain #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedIdentity #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .insecureLoginForms #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveContent #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .weakCipher #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContent #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveBlocked #connection-icon {
+	  display: none !important;	
 	}
 
 }
