--- a/xpi/content/css/alt_optionspage.css
+++ b/xpi/content/css/alt_optionspage.css
@@ -151,6 +151,10 @@
 	  padding:2px !important;
 	}
 	
+	#weavePrefsDeck button {
+	  font-size: 75% !important;
+	}
+	
 	/* checkbox and radio items */
 	checkbox image,
 	radio image {
