--- a/xpi/content/css/alt_optionswindow2.css
+++ b/xpi/content/css/alt_optionswindow2.css
@@ -166,6 +166,10 @@
 	  -moz-appearance: menulist !important;
 	}
 	
+	#weavePrefsDeck button {
+	  font-size: 75% !important;
+	}
+	
 	/* checkbox and radio items */
 	checkbox .checkbox-check {
 	  -moz-appearance: checkbox  !important;
