--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -484,11 +484,22 @@ radio.ctraddontab .radio-check-box1 {
   min-height:16px !important;
 }
 
-#ctraddon_altoptions_image{
+#ctraddon_pw_altoptions_default label,
+#ctraddon_pw_options_alt label,
+#ctraddon_pw_options_alt2 label,
+#ctraddon_pw_options_alt3 label{
   background:url('chrome://classic_theme_restorer/content/images/prefs_incontent.png') no-repeat left  !important;
   padding-left:20px !important;
   min-height:16px !important;
 }
+#ctraddon_pw_options_win label,
+#ctraddon_pw_options_win_alt label,
+#ctraddon_pw_options_win_ct label{
+  background:url('chrome://classic_theme_restorer/content/images/prefs_window.png') no-repeat left  !important;
+  padding-left:20px !important;
+  min-height:16px !important;
+}
+
 #ctraddon_altoptions_box {
   -moz-padding-start:8px !important;
 }
@@ -568,8 +579,14 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_padlock_classic{
   list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_classic.png');
 }
+#ctraddon_pw_padlock_amo{
+  list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_amo.png');
+}
 #ctraddon_pw_padlock_modern{
   list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_modern.png');
+}
+#ctraddon_pw_padlock_modern2{
+  list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_modern2.png');
 }
 
 #ctraddon_padlock_radio radio .radio-spacer-box,
