--- a/xpi/content/css/alt_optionswindow2.css
+++ b/xpi/content/css/alt_optionswindow2.css
@@ -121,7 +121,8 @@
 	
 	.main-content {
 	  margin-top: 20px !important;
-	  margin-bottom: 20px !important;
+	  margin-bottom: 10px !important;
+	  padding-bottom: unset !important;
 	}
 
 	.header label {
@@ -140,9 +141,17 @@
 
 	/* treechildren*/
 	#handlersView richlistitem,
-	#engineList treechildren::-moz-tree-row,
 	#blocklistsTree treechildren::-moz-tree-row {
 	  min-height: 24px !important;
+	}
+	
+	#engineList treechildren::-moz-tree-row{
+	  min-height: 20px !important;
+	  /*font-size: 60% !important;*/
+	}
+	
+	#engineChildren {
+	  font-size: 80% !important;
 	}
 	
 	treecols,
@@ -231,6 +240,7 @@
 	  background: inherit !important;
 	}
 	
+	#mainPrefPane + hbox,
 	#category-search[hidden="true"],
 	#mainPrefPane .header {
 	  display: none !important;
