--- a/xpi/content/css/empty_favicon.css
+++ b/xpi/content/css/empty_favicon.css
@@ -5,6 +5,10 @@
 	.tabbrowser-tab:not([pinned]) .tab-icon-image:not([src]) {
 	  display:inline !important;
 	}
+	
+	#main-window[fx44plus="true"] .tabbrowser-tab:not([pinned]) .tab-icon-image:not([src]) {
+	  list-style-image:url('chrome://classic_theme_restorer/content/images/default_dot_favicon.png') !important;
+	}
 
 	.tabbrowser-tab:not([pinned])[busy] .tab-throbber + .tab-icon-image:not([src]) {
 	  display:none !important;
