--- a/xpi/content/css/padlock_extra.css
+++ b/xpi/content/css/padlock_extra.css
@@ -56,9 +56,10 @@
 	}
 	
 	/* Firefox 45+ */
-	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .chromeUI #connection-icon {
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .chromeUI #identity-icon[src] + #tracking-protection-icon + #connection-icon {
 	  list-style-image: url(chrome://branding/content/identity-icons-brand.svg) !important;
 	  visibility: visible !important;
+	  display: block !important;
 	  width: 16px !important;
 	  height: 16px !important;
 	}
