--- a/xpi/content/css/ib_graycolor.css
+++ b/xpi/content/css/ib_graycolor.css
@@ -12,7 +12,7 @@
 	#urlbar-wrapper #urlbar[pageproxystate="invalid"] .unknownIdentity:hover,
 	#urlbar-wrapper #urlbar[pageproxystate="valid"] .unknownIdentity:hover,
 	#urlbar-wrapper #urlbar[pageproxystate="valid"] .chromeUI:hover {
-	  background: linear-gradient(#ececec,#c6c6c6) !important;
+	  background: linear-gradient(#f5f5f5,#c6c6c6) !important;
 	}
 
 	#urlbar-wrapper #urlbar[pageproxystate="invalid"] .unknownIdentity[open="true"],
@@ -21,7 +21,7 @@
 	#urlbar-wrapper #urlbar[pageproxystate="valid"] .unknownIdentity:hover:active,
 	#urlbar-wrapper #urlbar[pageproxystate="valid"] .chromeUI[open="true"],
 	#urlbar-wrapper #urlbar[pageproxystate="valid"] .chromeUI:hover:active {
-	  background: linear-gradient(#ececec,#c6c6c6) !important;
+	  background: linear-gradient(#f5f5f5,#c6c6c6) !important;
 	  box-shadow: 0 1px 1px hsla(0,0%,65%,.9) inset,
 			0 1px 3px 1px hsla(0,0%,65%,.7) inset !important;
 	}
