--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -203,6 +203,7 @@
 
 	/* Windows 10 tweaks */
 	@media (-moz-os-version: windows-win10) {
+	 @media (-moz-windows-default-theme) {
 	  #main-window[sizemode="normal"] #ctraddon_appbutton2{
 		margin-top:0px !important;
 		margin: 0 0 2px 0 !important;
@@ -256,7 +257,26 @@
 	  #main-window[sizemode="maximized"] #ctraddon_titlebartitle {
 		margin-top: -10px !important;
 	  }
+	 }
+	 
+	 /* adjust stuff for third party OS themes */
+	 @media not all and (-moz-windows-default-theme) {
+			
+		#main-window[sizemode="normal"] #titlebar #titlebar-content #ctraddon_appbutton2{
+		  margin: 0px 0 10px 0px !important;
+		}
+		#main-window[sizemode="maximized"] #titlebar #titlebar-content #ctraddon_appbutton2{
+		  margin: -2px 0 6px -1px !important;
+		}
+		
+		#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
+		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
+		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
+		  padding-top: 10px !important;
+		}
 
+	 }
+	 
 	}
 	
 	/*developer theme additions */
