--- a/xpi/content/css/old_toplevel_img.css
+++ b/xpi/content/css/old_toplevel_img.css
@@ -1,14 +1,14 @@
 @media not print {
 
-  html > head:first-child + body:last-child {
+  html > head:first-child + body:not([background]):not([background-image]):not([class]):not([style]):not([id]):last-child {
     background-image: unset !important;
   }
 
-  html > head:first-child + body:last-child > img.transparent:first-child:last-child {
+  html > head:first-child + body:not([background]):not([background-image]):not([class]):not([style]):not([id]):last-child > img.transparent:first-child:last-child {
     background: unset !important;
   }
 
-  html > head:first-child + body:last-child > img:first-child:last-child {
+  html > head:first-child + body:not([background]):not([background-image]):not([class]):not([style]):not([id]):last-child > img:first-child:last-child {
     text-align: unset !important;
     margin: unset !important;
     top: 8px !important;
