--- a/xpi/content/css/padlock_default.css
+++ b/xpi/content/css/padlock_default.css
@@ -259,4 +259,9 @@
 					0, 16, 16, 0) no-repeat center left !important;
 	}
 
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #identity-icon,
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #connection-icon{
+	  width: 16px !important;
+	}
+
 }
