--- a/xpi/content/css/padlock_extra.css
+++ b/xpi/content/css/padlock_extra.css
@@ -64,4 +64,9 @@
 	  height: 16px !important;
 	}
 
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #identity-icon,
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #connection-icon{
+	  width: 16px !important;
+	}
+
 }
