--- a/xpi/content/css/padlock_none.css
+++ b/xpi/content/css/padlock_none.css
@@ -13,8 +13,7 @@
 	  display: none !important;	
 	}
 
-	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #identity-icon,
-	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #connection-icon{
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #identity-icon{
 	  width: 16px !important;
 	}
 
