--- a/xpi/content/css/invicons_tabsbar.css
+++ b/xpi/content/css/invicons_tabsbar.css
@@ -58,6 +58,10 @@
 	#TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
+	#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
+	#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
+	  list-style-image: url(chrome://loop/skin/toolbar-inverted.png) !important;
+	}
 
 	/*tabs close button on tabs toolbar*/
 	#main-window #navigator-toolbox #TabsToolbar > .tabs-closebutton {
@@ -135,6 +139,10 @@
 		#main-window[fx40plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
 		#main-window[fx40plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 		  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted@2x.png) !important;
+		}
+		#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
+		#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
+		  list-style-image: url(chrome://loop/skin/toolbar-inverted/toolbar-inverted@2x.png) !important;
 		}
 		
 		#main-window[fx40plus="true"] #TabsToolbar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
