--- a/xpi/content/css/mac/invicons_navbarextra.css
+++ b/xpi/content/css/mac/invicons_navbarextra.css
@@ -39,6 +39,10 @@
 	  #nav-bar  toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 		list-style-image: url(chrome://browser/skin/loop/toolbar-inverted@2x.png) !important;
 	  }
+	  #main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
+	  #main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
+	    list-style-image: url(chrome://loop/skin/toolbar-inverted/toolbar-inverted@2x.png) !important;
+	  }
 
 	  #nav-bar #ctraddon_back-button > .toolbarbutton-icon {
 		-moz-image-region: rect(0, 108px, 36px, 72px) !important;
