--- a/xpi/content/css/padlock_classic.css
+++ b/xpi/content/css/padlock_classic.css
@@ -79,4 +79,12 @@
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #identity-icon,
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar #connection-icon{
+	  width: 16px !important;
+	}
+	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar *:not(.verifiedDomain):not(.verifiedIdentity):not(.insecureLoginForms):not(.mixedActiveContent):not(.weakCipher):not(.mixedDisplayContent):not(.mixedDisplayContentLoadedActiveBlocked):not(.mixedActiveBlocked) #connection-icon:not([scr]){
+	  width: 0px !important;
+	}
+
 }
