--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -524,6 +524,7 @@ radio.ctraddontab .radio-check-box1 {
 }
 
 #ctraddon_pw_bmbutpanelm label,
+#ctraddon_pw_bmbunsortbm label,
 #ctraddon_pw_bmbutnotext label {
   background:url('chrome://classic_theme_restorer/content/images/bookmarks.png') no-repeat left !important;
   padding-left:20px !important;
