--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -296,10 +296,10 @@
 		  height: 24px !important;
 		}
 		
-		#searchbar .autocomplete-textbox,
+		/*#searchbar .autocomplete-textbox,
 		#urlbar .autocomplete-textbox {
 		  font-size:97% !important;
-		}
+		}*/
 
 		#urlbar{
 		  padding-top: unset !important;
