--- a/xpi/content/css/am_compact.css
+++ b/xpi/content/css/am_compact.css
@@ -70,6 +70,7 @@
 
 	#addons-page #header-search{
 	  padding: 1px !important;
+	  min-height: unset !important;
 	  height: unset !important;
 	}
 	
