--- a/xpi/content/css/am_nowarnings.css
+++ b/xpi/content/css/am_nowarnings.css
@@ -1,6 +1,8 @@
 @-moz-document url-prefix(chrome://mozapps/content/extensions/extensions.xul), url-prefix(about:addons) {
 
 	.addon .warning,
+	.addon .error,
+	#detail-view .error,
 	#detail-view .warning,
 	.global-warning-container {
 	  display: none;
