--- a/xpi/content/css/oldsearch.css
+++ b/xpi/content/css/oldsearch.css
@@ -28,7 +28,6 @@
 	.searchbar-dropmarker-image {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/searchbar-dropdown-arrow.png");
 	  -moz-image-region: rect(0, 13px, 11px, 0);
-	  width: 7px;
 	}
 
 	.searchbar-engine-button[open="true"] > .searchbar-dropmarker-image {
@@ -53,6 +52,22 @@
 	
 	.search-go-button:-moz-locale-dir(rtl) {
 	  transform: scaleX(-1);
+	}
+	
+	@media (min-resolution: 1.1dppx) {
+		.search-go-button {
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/search-glass32.png") !important;
+		  -moz-image-region: rect(0px, 32px, 32px, 0) !important;
+		}
+
+		.search-go-button:hover {
+		  -moz-image-region: rect(0px, 64px, 32px, 32px) !important;
+		}
+
+		.search-go-button:active {
+		  -moz-image-region: rect(0px, 96px, 32px, 64px) !important;
+		}
+		
 	}
 	
 	.searchbar-engine-menuitem[selected="true"] > .menu-iconic-text {
