--- a/xpi/content/css/am_nowarnings.css
+++ b/xpi/content/css/am_nowarnings.css
@@ -2,6 +2,7 @@
 
 	.addon .warning,
 	.addon .error,
+	#show-disabled-unsigned-extensions,
 	#detail-view .error,
 	#detail-view .warning,
 	.global-warning-container {
