--- a/xpi/content/css/linux/oldsearch_extra.css
+++ b/xpi/content/css/linux/oldsearch_extra.css
@@ -6,6 +6,22 @@
 	  padding-top: 3px !important;
 	  padding-bottom: 3px !important;
 	}
+	
+	.searchbar-dropmarker-image {
+	  list-style-image: unset !important;
+	  -moz-image-region: unset !important;
+	  -moz-appearance: toolbarbutton-dropdown !important;
+	  width: 12px !important;
+	  height: 12px !important;
+	}
+
+	searchbar .search-go-button ,
+	searchbar .search-go-button:hover,
+	searchbar .search-go-button:active {
+	  list-style-image: url("moz-icon://stock/gtk-find?size=menu") !important;
+	  -moz-image-region: rect(0px, 16px, 16px, 0) !important;
+	  width: 18px !important;
+	}
 
 	searchbar .search-go-button {
 	  -moz-margin-end: 0px !important;
