--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -525,7 +525,9 @@ radio.ctraddontab .radio-check-box1 {
 
 #ctraddon_pw_bmbutpanelm label,
 #ctraddon_pw_bmbunsortbm label,
-#ctraddon_pw_bmbutnotext label {
+#ctraddon_pw_bmbutnotext label,
+#ctraddon_pw_bmbviewbmtb label,
+#ctraddon_pw_bmbnounsort label {
   background:url('chrome://classic_theme_restorer/content/images/bookmarks.png') no-repeat left !important;
   padding-left:20px !important;
   min-height:16px !important;
