--- a/xpi/content/css/winxp/overlayprefs_extra.css
+++ b/xpi/content/css/winxp/overlayprefs_extra.css
@@ -10,6 +10,7 @@
 #ctraddon_appbutton_list1{
   visibility: visible !important;
 }
+#ctraddon_pw_menubargroup2,
 #ctraddon_pw_menubarnofog,
 #ctraddon_pw_altmenubar,
 #ctraddon_appbutton_list2{
