--- a/xpi/content/css/winxp/classictabsextrac2.css
+++ b/xpi/content/css/winxp/classictabsextrac2.css
@@ -26,7 +26,10 @@
 	#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.png) !important;
 	}
-
+	#main-window[fx45plus="true"] .tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
+	#main-window[fx45plus="true"] #TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
+	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
+	}
 
 	/* tab colors lightweight theme */
 	.tabbrowser-tab[selected]:-moz-lwtheme .tab-content {
